minor styling fixes - view history card and spacing on wishlist

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
   display: grid;
   grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
 
 .header {
@@ -13,6 +14,7 @@
 
 .content {
   background-color: inherit;
+  background-color: rgb(247, 247, 247);
 }
 
 .footer {
