--- a/src/components/WishlistPage/WishlistPage.css
+++ b/src/components/WishlistPage/WishlistPage.css
@@ -22,6 +22,10 @@
   padding: 1rem;
 }
 
+.empty-wishlist-content {
+  padding: 1rem;
+}
+
 .empty-wishlist-content .wishlist-icon {
   display: flex;
   flex-direction: row;
@@ -34,4 +38,5 @@
 
 .recent-items {
   grid-area: recent-items;
+  background-color: white;
 }
